fixes #5, links, are not visible highlited in top breadcrumbs

--- a/pylons_app/public/css/monoblue_custom.css
+++ b/pylons_app/public/css/monoblue_custom.css
@@ -4,7 +4,9 @@
 	background: #DBD4C6;
 	font-family: sans-serif;
 }
-
+#mainhtml .breadcrumbs a:HOVER{
+	text-decoration:  underline;
+}
 a {
 	color: #556CB5;
 	text-decoration: none;
